# danai

./: .gitignore  README.md  bump_version.py  pyproject.toml  setup.py  update.txt
.github/workflows/: publish-to-pypi.yaml
ai_utils/: __init__.py
aiutils/: __init__.py  cli.py  json_manager.py  pricing.json  printer_template.py
aiutils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
danai/: json_manager.py
danai.egg-info/: PKG-INFO
summarymaker/: __init__.py  config.py  main.py  sample_configs.py  tcounter.py
summarymaker/filtering/: __init__.py  filters.py
summarymaker/output/: __init__.py  summary_generator.py  tree_generator.py
summarymaker/processing/: __init__.py  baseprocessor.py  importcondenser.py  printremover.py  remover.py  truncator.py  typeremover.py
